# arkadaz-human-segment-webcam

./: README.md  Training_script.ipynb  main.py  pyproject.toml  requirements.txt  requirements_.txt
.github/workflows/: github-actions-basic.yaml
helper/: helper_function.py  test_class.py
helper_function/: helper_function.py  test_class.py
